--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 html{
   font-family:Arial, Helvetica, sans-serif;
 }
-/* 
+/*
 1. Vị trí
 2. Kích thước
 3. Màu sắc
@@ -36,7 +36,7 @@ html{
 #nav li{
   position: relative;
 }
-  #nav > li > a{         
+  #nav > li > a{
   color: #fff;
   text-transform: uppercase;
 }
@@ -78,7 +78,7 @@ html{
 }
 
 #header .search-btn{
-  float: right; 
+  float: right;
   font-size: 20px;
   color: #fff;
   line-height: 46px;
@@ -97,7 +97,8 @@ html{
 
 #slider {
   position: relative;
-  padding-top: 50%;  
+  padding-top: 50%;
+  margin-top: 46px;
   background: url('https://www.w3schools.com/w3images/la.jpg') top center/ cover no-repeat;
 }
 .text-content{
