--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,14 +290,21 @@ margin-left: 16px;
   left: 0;
   bottom: 0;
   background: rgba(0,0,0,0.4);
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
 }
+
+.modal.open{
+  display: flex;
+}
+
 .model_container{
   background-color: #fff;
   width: 900px;
   min-height: 200px;
+  position: relative;
+  max-width: calc(100%-16px);
 }
 .modal_header{
   background: green;
@@ -307,4 +314,55 @@ margin-left: 16px;
   justify-content: center;
   font-size: 30px;
   color:#fff;
+}
+
+.model_closed{
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  padding: 16px;
+  cursor: pointer;
+}
+.model_closed:hover{
+  opacity: 0.9;
+}
+.model_body {
+  padding: 16px;
+}
+
+.model_lable {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.lable_input {
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: 10px;
+  font-size: 15px;
+  margin-bottom: 24px;
+}
+
+button#buy_ticket {
+  background-color: green;
+  width: 100%;
+  padding: 15px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+button#buy_ticket:hover {
+  opacity: 0.3;
+}
+.model_heading_lable{
+  margin-right: 16px;
+}
+
+.modal_footer{
+  text-align: right;
+  padding: 16px;
+}
+.modal_footer a{
+  color: green;
 }
