--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,58 +227,54 @@ margin-left: 16px;
 #content .section-heading{
   text-align: center;
 }
-.place_list{
-  margin-top: 32px;
-  margin-left: -8px;
-  margin-right: -8px;
-
-}
-.place_item{
-  FLOAT: LEFT;
-  width: 33.33333%;
-  padding: 0 8px;
-
+.place_list {
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  flex-wrap: wrap;
 }
 
-
-.place_img{
-  display: block;
+.place_item {
+  width: 30%;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
 }
 
-.place_img:hover{
-  opacity: 0.6;
+.place_img {
+  width: 100%;
+  height: 200px; /* Set a fixed height for the image */
+  object-fit: cover; /* Ensure the image covers the entire container */
+  border-radius: 5px;
 }
-.place_body{
-  padding: 16px;
-  background-color: #fff;
-  width: 64%;
 
+.place_body {
+  background-color: white;
+  padding: 10px;
+  box-sizing: border-box;
+  flex-grow: 1;
 }
-.place_heading{
 
+.place_description {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.place_time{
-  margin-top: 15px;
-  opacity: 0.6;
 
-}
-.place_discription{
-  margin-top: 15px;
-
-}
-.place_btn{
+.place_btn {
+  background-color: #007bff;
   color: #fff;
-  background-color: #000;
-  padding: 11px 16px;
-  text-decoration: none;
-  display: inline-block;
-  margin-top: 15px;
-
-}
-.place_btn:hover{
-  opacity: 0.6;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
+.clear {
+  clear: both;
+}
 #footer {
 
 
@@ -290,33 +286,36 @@ margin-left: 16px;
   left: 0;
   bottom: 0;
   background: rgba(0,0,0,0.4);
-  display: none;
   align-items: center;
   justify-content: center;
+  display: none;
+  z-index: 2;
 }
 
-.modal.open{
-  display: flex;
+.modal.open {
+  display: flex !important;
 }
 
-.model_container{
+.model_container {
   background-color: #fff;
   width: 900px;
   min-height: 200px;
   position: relative;
-  max-width: calc(100%-16px);
+  max-width: calc(100% - 16px);
+  animation: modalFadeIn ease 0.3s;
 }
-.modal_header{
+
+.modal_header {
   background: green;
   height: 130px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 30px;
-  color:#fff;
+  color: #fff;
 }
 
-.model_closed{
+.model_closed {
   position: absolute;
   top: 0;
   right: 0;
@@ -324,9 +323,11 @@ margin-left: 16px;
   padding: 16px;
   cursor: pointer;
 }
-.model_closed:hover{
+
+.model_closed:hover {
   opacity: 0.9;
 }
+
 .model_body {
   padding: 16px;
 }
@@ -355,14 +356,25 @@ button#buy_ticket {
 button#buy_ticket:hover {
   opacity: 0.3;
 }
-.model_heading_lable{
+
+.model_heading_label {
   margin-right: 16px;
 }
 
-.modal_footer{
+.modal_footer {
   text-align: right;
   padding: 16px;
 }
-.modal_footer a{
+
+.modal_footer a {
   color: green;
+}
+
+@keyframes modalFadeIn {
+  from {
+    transform: translateY(-100px);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
